Fixed the “Subscription Button” now it’s aligned in center.

--- a/assets/style/bootstrap.css
+++ b/assets/style/bootstrap.css
@@ -110,8 +110,12 @@
 .page-welcome .centralized {
   z-index: 2;
 }
-/**   PAGE | WORK*/.portfolio-items {
-  /*    * Filtering configuration    */
+/*
+*   PAGE | WORK
+*/.portfolio-items {
+  /*
+    * Filtering configuration
+    */
 }
 .portfolio-items a {
   position: relative;
@@ -235,7 +239,9 @@
 .portfolio-item-details .submenu span:hover {
   text-decoration: none;
 }
-/**   PAGE | FEATURES*/.page-features {
+/*
+*   PAGE | FEATURES
+*/.page-features {
   position: relative;
   background: url(../images/pages/features/q_bck.jpg) 50% 0 no-repeat fixed;
   -webkit-background-size: cover;
@@ -752,7 +758,9 @@
 .page-contact form .media {
   padding-top: 24px;
 }
-/**   PAGE | CLIENTS*/.page-clients .row-fluid {
+/*
+*   PAGE | CLIENTS
+*/.page-clients .row-fluid {
   padding-bottom: 40px;
   padding-top: 15px;
 }
@@ -856,7 +864,9 @@
 #navigation .mobile-menu:hover .icon-bar {
   background-color: #4e808e;
 }
-/**   FOOTER*/.pages footer {
+/*
+*   FOOTER
+*/.pages footer {
   padding-top: 30px;
   padding-bottom: 60px;
   text-align: center;
@@ -1596,6 +1606,7 @@ a:hover {
 }
 .span12 {
   width: 975px;
+  text-align: center;
 }
 .span11 {
   width: 892px;
